--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,3 +1,5 @@
 <h1>Add a job to your calendar!</h1>
 
-<%= render  'form', job: @job %>
+<div class="col-md-5">
+  <%= render 'form', job: @job %>
+</div>
