--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -38,7 +38,8 @@
 
   <div class="form-group">
     <%= form.label :paid %>
-    <%= form.check_box :paid, id: :job_paid, class: 'form-control' %>
+    <%= form.hidden_field value: false %>
+    <%= form.check_box :paid, id: :job_paid, value: true, class: 'form-control' %>
   </div>
 
   <div class="form-group">
