--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -6,7 +6,9 @@
       <th scope="col">Client</th>
       <th scope="col">Description</th>
       <th scope="col">Location</th>
-      <th scope="col">Fee</th>
+      <th scope="col">Revenue</th>
+      <th scope="col">Expenses</th>
+      <th scope="col">Profit</th>
       <th scope="col">Paid</th>
       <th scope="col">Notes</th>
       <th scope="col">Actions</th>
@@ -16,19 +18,15 @@
     <% @jobs.each do |job| %>
     <tr>
       <td class="table--nowrap"><%= job.date.strftime('%a, %b %d, %G') %></td>
-      <td><%= job.client %></td>
+      <td><%= link_to job.client, job %></td>
       <td><%= job.description %></td>
       <td><%= job.location %></td>
       <td><%= number_to_currency(job.amount) %></td>
-      <td>
-        <% if job.paid %>
-          Paid
-        <% else %>
-          Payment Outstanding
-        <% end %>
-      </td>
+      <td><%= number_to_currency(job.sum_expenses) %></td>
+      <td><%= job.profit %></td>
+      <td><%= job_paid?(job) %></td>
       <td><%= job.notes %></td>
-      <td class="table--nowrap"><%= link_to "Edit", edit_job_path(job) %> | <%= link_to "Delete", job, method: :delete, data: {confirm: 'Are you shure you want to delete this job?'} %></td>
+      <td class="table--nowrap"><%= link_to "Edit", edit_job_path(job) %> | <%= link_to "Delete", job, method: :delete, data: {confirm: 'Are you sure you want to delete this job?'} %></td>
     </tr>
     <% end %>
   </tbody>
