Expense views and related job views updated

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -15,7 +15,8 @@
   </div>
 </div>
 <hr>
-<h5 class="mb-3">Related expenses</h5>
+<h5 class="">Related expenses</h5>
+<%= link_to "New expense", new_job_expense_path(@job), class: 'mb-3 mt-0 btn btn-primary btn-sm' %>
 <div class="row">
   <div class="col-md-8">
     <table class="table table-striped">
