--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Current workload</h1>
+<%= link_to "New job", new_job_path, class: "btn btn-primary btn-sm mb-3" %>
 <table class="table table-striped">
   <thead>
     <tr>
