--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,13 @@
       <ul class="nav">
         <li class="nav-item"><%= link_to  "Freelance Financial", root_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to  "Dashboard", jobs_path, class: 'nav-link' %></li>
-        <li class="nav-item"><%= link_to  "Sign In", "#", class: 'nav-link' %></li>
+        <% if user_signed_in? %>
+          <li class="nav-item"><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
+          <li class="nav-item align-self-center ml-auto"><%= link_to current_user.email, edit_user_registration_path, class: 'nav-link' %></li>
+        <% else %>
+          <li class="nav-item"><%= link_to  "Sign In", new_user_session_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to "Sign Up", new_user_registration_path, class: 'nav-link' %></li>
+        <% end %>
       </ul>
       <% if flash[:notice] %>
         <div class="alert alert-success">
