--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: expense, url: [@job, @expense], local: true) do |form| %>
+<%= form_with(model: [job, expense], local: true) do |form| %>
   <% if expense.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
@@ -31,7 +31,7 @@
     <%= form.date_select :date, id: :expense_date, class: 'form-control'  %>
   </div>
 
-  <div class="action">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.submit "Save", class: 'btn btn-success', method: :patch %>
   </div>
 <% end %>
