--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Expense</h1>
 
 <div class="col-md-5">
-  <%= render 'form', expense: @expense %>
-  <%= link_to "Back", job_path(@job) %>
+  <%= render partial: 'form', locals: { job: @expense.job, expense: @expense } %>
+  <%= link_to "Back", job_path(@expense.job) %>
 </div>
