--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -47,7 +47,7 @@
     <%= form.text_area :notes, id: :job_notes, class: 'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.submit "Save", class: 'btn btn-primary', method: :patch %>
   </div>
 <% end %>
