--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,6 @@
       <h1>Freelance Financial</h1>
       <p>A simple tool to help freelancers gain control of their cash flow and increase their profit!</p>
       <hr class="m-4">
-      <a href="#" class="btn btn-primary btn-lg" role="button">Sign up today!</a>
+      <%= link_to 'Sign Up!', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
     </div>
   </div>
