--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="form-group">
     <%= form.label :amount %>
-    <%= form.number_field :amount, id: :expense_amount, class: 'form-control'  %>
+    <%= form.text_field :amount, id: :expense_amount, class: 'form-control'  %>
   </div>
 
   <div class="form-group">
@@ -32,6 +32,6 @@
   </div>
 
   <div class="form-group">
-    <%= form.submit "Save", class: 'btn btn-success', method: :patch %>
+    <%= form.submit "Save", class: 'btn btn-primary', method: :patch %>
   </div>
 <% end %>
