--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -39,7 +39,7 @@
   <div class="form-group">
     <%= form.label :paid %>
     <%= form.hidden_field value: false %>
-    <%= form.check_box :paid, id: :job_paid, value: true, class: 'form-control' %>
+    <%= form.check_box :paid, id: :job_paid, value: true %>
   </div>
 
   <div class="form-group">
